# ch_logs_analysis

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
grafana/dashboards/: web_logs_dashboard.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasource.yaml
init/: 001_create_tables.sql  002_create_grafana_user.sql
scripts/: logs_generation.py
scripts/sql/: average_response_time_by_url.sql  count_of_errors.sql  counts_by_days.sql  materialized_view.sql  top_users_by_request_count.sql  ttl.sql
